[gd_scene load_steps=15 format=3 uid="uid://ccffp75k3x5vl"]

[ext_resource type="Script" path="res://projectiles/pink_enemy_projectile.gd" id="1_4w2lu"]
[ext_resource type="Texture2D" uid="uid://epm3j6sgwd4y" path="res://assets/pink_enemy_projectile.png" id="1_vuh8y"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="2_kbvna"]
[ext_resource type="Script" path="res://components/move_component.gd" id="3_8j0re"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="4_hpcub"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p1lde"]
atlas = ExtResource("1_vuh8y")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_js4kj"]
atlas = ExtResource("1_vuh8y")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ct0h3"]
atlas = ExtResource("1_vuh8y")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmnhr"]
atlas = ExtResource("1_vuh8y")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6l5r2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1lde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_js4kj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ct0h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmnhr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6ukal"]
radius = 4.0

[sub_resource type="Animation" id="Animation_jo048"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-4, 0)]
}

[sub_resource type="Animation" id="Animation_yaw2f"]
resource_name = "ocillate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Anchor:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-4, 0), Vector2(4, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_10lyd"]
_data = {
"RESET": SubResource("Animation_jo048"),
"oscillate": SubResource("Animation_yaw2f")
}

[node name="PinkEnemyProjectile" type="Node2D"]
script = ExtResource("1_4w2lu")

[node name="Anchor" type="Node2D" parent="."]
position = Vector2(-4, 0)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Anchor"]
sprite_frames = SubResource("SpriteFrames_6l5r2")
autoplay = "default"
frame = 2
frame_progress = 0.792271

[node name="HitboxComponent" type="Area2D" parent="Anchor"]
collision_layer = 0
script = ExtResource("2_kbvna")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anchor/HitboxComponent"]
shape = SubResource("CircleShape2D_6ukal")

[node name="MoveComponent" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("3_8j0re")
actor = NodePath("..")
velocity = Vector2(0, 30)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 2.98023e-08)
scale = Vector2(0.4, 0.4)

[node name="ScaleComponent" type="Node" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_hpcub")
sprite = NodePath("../Anchor/AnimatedSprite2D")
scale_amount = Vector2(2, 2)
scale_duration = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_10lyd")
}
autoplay = "oscillate"

[connection signal="hit_hurtbox" from="Anchor/HitboxComponent" to="." method="_on_hitbox_component_hit_hurtbox"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
